--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
               </div>
               <!-- Page content here -->
-                <div class="hero min-h-screen" style="background-image: url(./images/index/main.JPG);">
+                <div class="hero min-h-screen" style="background-image: url(./images/index/main.jpg);">
                     <div class="hero-overlay bg-opacity-60"></div>
                     <div class="hero-content text-center text-neutral-content">
                       <div class="max-w-md">
