--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="flex-none hidden lg:block">
                   <ul class="menu menu-horizontal">
                     <!-- Navbar menu content here -->
-                    <li><a>Navbar Item 1</a></li>
-                    <li><a>Navbar Item 2</a></li>
+                    <li><a>Photos</a></li>
+                    <li><a>Some words for u</a></li>
                   </ul>
                 </div>
               </div>
@@ -47,7 +47,7 @@
               <ul class="menu p-4 w-80 bg-slate-200 text-pink-700">
                 <!-- Sidebar content here -->
                 <li><a>Photos</a></li>
-                <li><a>Sidebar Item 2</a></li>
+                <li><a>Some words for u</a></li>
                 
               </ul>
               
