--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               <label for="my-drawer-3" class="drawer-overlay"></label> 
               <ul class="menu p-4 w-80 bg-slate-200 text-pink-700">
                 <!-- Sidebar content here -->
-                <li><a>Photos</a></li>
-                <li><a>Some words for u</a></li>
+                <li><a href="photos.html" class="active:bg-pink-500">Photos</a></li>
+                <li><a href="words.html" class="active:bg-pink-500">Some words for u</a></li>
                 
               </ul>
               
