--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                       <div class="max-w-md">
                         <h1 class="mb-5 text-5xl font-bold">Halo sayang!</h1>
                         <p class="mb-5">Happy 17 yaaa! ini gift kecil aku buat kamu!! Maaf kalo kurang lucu😔</p>
-                        <button class="btn btn-primary bg-pink-500 active:bg-pink-700 hover:bg-pink-600">Mulai!</button>
+                        <a href="words.html" class="btn btn-primary bg-pink-500 active:bg-pink-700 hover:bg-pink-600 border-none">Mulai!</a>
                       </div>
                     </div>
                   </div>
