--- a/words.html
+++ b/words.html
@@ -59,7 +59,7 @@
           <label for="my-modal-4" class="modal cursor-pointer">
             <label class="modal-box relative bg-pink-200" for="">
                 <div class="card lg:card-side bg-slate-200 shadow-xl">
-                    <figure><img src="./images/index/main.jpg" alt="Album"/></figure>
+                    <figure><img src="./images/index/modal.jpg" alt="Album"/></figure>
                     <div class="card-body text-black">
                         <p>
                             HAPPY SWEET SEVENTEEN BOCIL😡🤬
