--- a/photos.html
+++ b/photos.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="bg-slate-200" lang="en">
+<html class="bg-pink-300" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,12 +24,37 @@
                 <div class="flex-none hidden lg:block">
                   <ul class="menu menu-horizontal">
                     <!-- Navbar menu content here -->
-                    <li><a>Photos</a></li>
+                    <li><a>Main Menu</a></li>
                     <li><a>Some words for u</a></li>
                   </ul>
                 </div>
               </div>
-              <!-- Page content here -->
+              <div class="bg-pink-300 text-black font-semibold text-center text-xl h-100">
+                <div class="m-3"><h1> Some Of Our Photos </h1></div>
+                
+                <div class="flex flex-row flex-wrap p-5 bg-slate-200 rounded-lg shadow-lg">
+                    <img class="w-1/4 h-1/4" src="./images/photos/1.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/2.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/3.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/4.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/5.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/6.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/7.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/8.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/9.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/10.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/11.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/12.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/13.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/14.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/15.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/16.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/17.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/18.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/19.jpg" alt="">
+                    <img class="w-1/4 h-1/4" src="./images/photos/20.jpg" alt="">
+                </div>
+              </div>
 
             </div> 
             <div class="drawer-side">
