--- a/photos.html
+++ b/photos.html
@@ -62,7 +62,9 @@
               <ul class="menu p-4 w-80 bg-slate-200 text-pink-700">
                 <!-- Sidebar content here -->
                 <li><a href="index.html" class="active:bg-pink-500">Main Page</a></li>
-                <li><a href="words.html" class="active:bg-pink-500">Some words for u</a></li>
+                <li><a href="photos.html" class="bg-pink-500 text-white">Photos</a></li>
+                <li><a href="words.html" class="active:bg-pink-500">Some words that remind me of u</a></li>
+                <li><a href="pdkt.html" class="active:bg-pink-500">Some photos that remind me of our "PDKT" phase</a></li>
                 
               </ul>
               
