--- a/pdkt.html
+++ b/pdkt.html
@@ -24,30 +24,32 @@
                 <div class="flex-none hidden lg:block">
                   <ul class="menu menu-horizontal">
                     <!-- Navbar menu content here -->
-                    <li><a>Main Menu</a></li>
-                    <li><a>Some words for u</a></li>
+                    <li><a href="index.html" class="active:bg-pink-500 rounded-lg">Main Page</a></li>
+                    <li><a href="photos.html" class="active:bg-pink-500 rounded-lg">Photos</a></li>
+                    <li><a href="words.html" class="active:bg-pink-500 rounded-lg">Words</a></li>
+                    <li><a href="pdkt.html" class="bg-pink-500 text-white rounded-lg">PDKT</a></li>
                   </ul>
                 </div>
               </div>
               <div class="bg-pink-300 text-black font-semibold text-center text-xl h-100">
                 <div class="m-3"><h1> Some Of Our "PDKT" Photos </h1></div>
                 
-                <div class="flex flex-row flex-wrap p-5 bg-slate-200 rounded-lg shadow-lg">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/1.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/2.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/3.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/4.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/5.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/6.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/7.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/8.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/9.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/10.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/11.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/12.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/13.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/14.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/pdkt/15.jpg" alt="">
+                <div class="flex flex-row flex-wrap p-5 bg-slate-200 rounded-3xl shadow-lg">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/1.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/2.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/3.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/4.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/5.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/6.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/7.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/8.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/9.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/10.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/11.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/12.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/13.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/14.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/15.jpg" alt="">
                 </div>
               </div>
 
