--- a/words.html
+++ b/words.html
@@ -24,17 +24,18 @@
                 <div class="flex-none hidden lg:block">
                   <ul class="menu menu-horizontal">
                     <!-- Navbar menu content here -->
-                    <li><a>Main Menu</a></li>
-                    <li><a>Some words for u</a></li>
+                    <li><a href="index.html" class="active:bg-pink-500 rounded-lg">Main Page</a></li>
+                    <li><a href="photos.html" class="active:bg-pink-500 rounded-lg">Photos</a></li>
+                    <li><a href="words.html" class="bg-pink-500 text-white rounded-lg">Words</a></li>
+                    <li><a href="pdkt.html" class="active:bg-pink-500 rounded-lg">PDKT</a></li>
                   </ul>
                 </div>
               </div>
               <div class="bg-pink-300 text-black font-semibold text-center text-xl h-100">
                 <div class="m-3"><h1> Some Words That Remind Me of You </h1></div>
                 
-                <div class="flex flex-row flex-wrap p-5 bg-slate-200 rounded-lg shadow-lg gap-3 text-sm">
-                    <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
-                    <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
+                <div class="grid md:flex md:flex-wrap md:justify-center p-4 bg-slate-200 gap-1 rounded-lg shadow-lg text-sm">
+                    <p class="p-3  rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
                     <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
                     <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
                     <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
