--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
                 </div> 
                 <div class="flex-1 px-2 mx- text-pink-700 font-bold">Kia's Birthday Gift💘</div>
                 <div class="flex-none hidden lg:block">
-                  <ul class="menu menu-horizontal">
+                  <ul class="menu menu-horizontal text-pink-800">
                     <!-- Navbar menu content here -->
-                    <li><a>Photos</a></li>
-                    <li><a>Some words for u</a></li>
+                    <li><a href="index.html" class="bg-pink-500 text-white rounded-lg">Main Page</a></li>
+                    <li><a href="photos.html" class="active:bg-pink-500 rounded-lg">Photos</a></li>
+                    <li><a href="words.html" class="active:bg-pink-500 rounded-lg">Words</a></li>
+                    <li><a href="pdkt.html" class="active:bg-pink-500 rounded-lg">PDKT</a></li>
                   </ul>
                 </div>
               </div>
@@ -58,13 +60,13 @@
 
           <input type="checkbox" id="my-modal-3" class="modal-toggle" />
 <div class="modal">
-  <div class="modal-box relative bg-pink-300">
+  <div class="modal-box relative max-w-none w-screen md:w-1/2 bg-pink-300">
     <div class="flex justify-end sticky top-0 z-50">
     <label for="my-modal-3" class="btn btn-sm btn-circle bg-white text-black">✕</label>
 </div>
-    <div class="card lg:card-side bg-slate-200 shadow-xl">
-        <figure><img src="./images/index/modal.jpg" alt="Album"/></figure>
-        <div class="card-body text-black">
+    <div class="card bg-slate-200 shadow-xl">
+        <figure class="w-full"><img src="./images/index/modal.jpg" alt="Album"/></figure>
+        <div class="card-body text-black text-sm">
             <p>
                 HAPPY SWEET SEVENTEEN BOCIL😡🤬
 kesel udah 17 ajaa!! heheh gimana sayang perjalanan hidup kamu di umur 16 tahunnn,pasti banyak lika liku yaa, sedih seneng susah mudah ketawa nangis sampai diem dan bener bener ga mikirin apa apa pasti udah dirasain,tapi aku sedih soalnya gabisa nemenin kamu dari awal..tapi gapapa di umur kamu yang ke 17 ini aku bisa nemenin kamu dari awal!! aku pengen kita rasain semua hal itu bareng barengg sayangg,ayo kita explore lebih banyak lagii!,semoga chapter kamu yang ke 17 bisa tamat dengan baikk,tentunya bareng akuu di chapter kali iniii🤗, wish kamu apa ajaa di umur yang udah legal inii,wish aku buat kamu ituu semogaa kamu bisa kurangin INSECURE kamuu, bisa lebih sabar juga buat ngadepin pacar kamu yang ga peka dan nyebelin ini, samaa bisa ngejalanin tanggung jawab kamu dengan baikk aamin.Kita udah sama sama 17 sayanggg aku juga mau ngasih wish buat hubungan kita dehh, semoga kita bisa lebih dewasa lagi, sama sama bisa jadi rumah yang terbaik buat satu sama lainn dan konsistenn aamin,satu lagi deh harus lebih terbuka!! Hehheeh, oiyaa di umur kamu yang ke 16 aku baru masuk di kehidupan kamu 5 bulan yaa? nah di yang ke 17 ini siap siap yaa!! siap siap kamu punya tato banyak di tangan-bahu kamu,siap siap pipi kamu bakal merah merah kaya smanli pas dbl,siap siap badan kamu bakal gepeng,siap siap idung kamu bakl kaya pinokio kalo lagi ngeboong sama siap siap tangan kamu bakal ada lem korea biar ga bisa lepas sama tangan seseorang,kira kira siapa ya orang yang bikin onar ituuu😋😝, eh orang itu ga selalu bikin onar tapii,kata orang itu dia juga bisa jadi wadah buat semua teh dan kopi kamuu, dia bisa jadi rumah kalau kamu butuh istirahat,dia bisa jadi bantal kalau kamu butuh senderan,dia bisa jadi tissue kalo kamu lagi nangis, dia bisa jadi obat buat ngeredain rasa sakit kamuu, dia juga bisa jadi guling kalau kamu butuh pelukann, jadi jangan takut yaaa!!! HAHAHA. terakhir you did great sayang! jangan bosen buat bikin aku bangga sama kamu yaa, lewatin proses nya bareng bareng dan nikmatin hasil nya bareng bareng.Sekali lagi happy sweet seventeen cantik😊, love you!❤❤    
