--- a/photos.html
+++ b/photos.html
@@ -24,35 +24,37 @@
                 <div class="flex-none hidden lg:block">
                   <ul class="menu menu-horizontal">
                     <!-- Navbar menu content here -->
-                    <li><a>Main Menu</a></li>
-                    <li><a>Some words for u</a></li>
+                    <li><a href="index.html" class="active:bg-pink-500 rounded-lg">Main Page</a></li>
+                    <li><a href="photos.html" class="bg-pink-500 text-white rounded-lg">Photos</a></li>
+                    <li><a href="words.html" class="active:bg-pink-500 rounded-lg">Words</a></li>
+                    <li><a href="pdkt.html" class="active:bg-pink-500 rounded-lg">PDKT</a></li>
                   </ul>
                 </div>
               </div>
               <div class="bg-pink-300 text-black font-semibold text-center text-xl h-100">
                 <div class="m-3"><h1> Some Of Our Photos </h1></div>
                 
-                <div class="flex flex-row flex-wrap p-5 bg-slate-200 rounded-lg shadow-lg">
-                    <img class="w-1/4 h-1/4" src="./images/photos/1.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/2.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/3.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/4.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/5.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/6.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/7.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/8.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/9.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/10.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/11.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/12.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/13.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/14.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/15.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/16.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/17.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/18.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/19.jpg" alt="">
-                    <img class="w-1/4 h-1/4" src="./images/photos/20.jpg" alt="">
+                <div class="flex flex-row flex-wrap p-5 bg-slate-200 rounded-3xl shadow-lg">
+                    <img class="w-1/4 h-1/4 rounded-3xl rounded-3xl" src="./images/photos/1.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/2.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/3.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/4.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/5.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/6.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/7.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/8.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/9.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/10.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/11.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/12.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/13.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/14.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/15.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/16.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/17.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/18.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/19.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/20.jpg" alt="">
                 </div>
               </div>
 
