--- a/words.html
+++ b/words.html
@@ -34,7 +34,7 @@
               <div class="bg-pink-300 text-black font-semibold text-center text-xl h-100">
                 <div class="m-3"><h1> Some Words That Remind Me of You </h1></div>
                 
-                <div class="grid md:flex md:flex-wrap md:justify-center p-4 bg-slate-200 gap-1 rounded-lg shadow-lg text-sm">
+                <div class="flex flex-wrap justify-center p-4 bg-slate-200 gap-3 rounded-lg shadow-lg text-sm">
                     <p class="p-3  rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
                     <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
                     <p class="p-3 rounded-lg bg-pink-400 text-black shadow-lg border-black"> Cantik </p>
