--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li><a href="photos.html" class="active:bg-pink-500 rounded-lg">Photos</a></li>
                     <li><a href="words.html" class="active:bg-pink-500 rounded-lg">Words</a></li>
                     <li><a href="pdkt.html" class="active:bg-pink-500 rounded-lg">PDKT</a></li>
+                    <li><a href="lastword.html" class="active:bg-pink-500 rounded-lg">Last Message</a></li>
                   </ul>
                 </div>
               </div>
@@ -52,7 +53,7 @@
                 <li><a href="photos.html" class="active:bg-pink-500">Photos</a></li>
                 <li><a href="words.html" class="active:bg-pink-500">Some words that remind me of u</a></li>
                 <li><a href="pdkt.html" class="active:bg-pink-500">Some photos that remind me of our "PDKT" phase</a></li>
-                
+                <li><a href="lastword.html" class="active:bg-pink-500">Last Message For You</a></li>
               </ul>
               
             </div>
