--- a/photos.html
+++ b/photos.html
@@ -36,7 +36,7 @@
                 <div class="m-3"><h1> Some Of Our Memorable Photos IMO</h1></div>
                 
                 <div class="flex flex-row flex-wrap justify-center gap-2 p-5 bg-slate-200 rounded-3xl shadow-lg">
-                    <img class="w-1/4 h-1/4 rounded-3xl rounded-3xl" src="./images/photos/1.jpg" alt="">
+                    <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/1.jpg" alt="">
                     <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/2.jpg" alt="">
                     <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/3.jpg" alt="">
                     <img class="w-1/4 h-1/4 rounded-3xl" src="./images/photos/4.jpg" alt="">
