--- a/lastword.html
+++ b/lastword.html
@@ -38,10 +38,18 @@
                         <source src="./images/lastmessage/vid.mp4" type="video/mp4">
                       </video>
                     <div class="hero-overlay bg-opacity-60 p-5"></div>
-                    <div class="hero-content text-center text-neutral-content bg-pink-300 p-4 bg-opacity-70 rounded-3xl shadow-lg text-white">
+                    <div class="hero-content text-center text-neutral-content bg-pink-200 p-4 bg-opacity-50 shadow-lg text-white">
                       <div class="max-w-md">
-                        <h1 class="mb-5 text-5xl font-bold">Halo sayang!</h1>
-                        <p class="mb-5">Happy 17 yaaa! ini gift kecil aku buat kamu!! Maaf kalo kurang lucu😔</p>
+                        <h1 class="mb-5 text-5xl font-bold">Halo cantik!</h1>
+                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim metus, sit amet auctor massa faucibus et. Proin consequat auctor felis in sodales. Maecenas lacus mauris, condimentum mattis rutrum id, mattis a elit. Nullam dolor sapien, convallis id auctor ac, efficitur eget lorem. Vestibulum ante ipsum primis in faucibus orci luctus et </p>
+                        <br>
+                        <p> Oiyaa, ini ada lagu buat kamu. dengerin yaa:</p>
+                        <br>
+                        <div class="flex justify-center">
+                        <audio controls>
+                            <source src="./images/lastmessage/1d.mp3" type="audio/mp3">
+                          </audio>
+                        </div>
                       </div>
                     </div>
                   </div>
