--- a/pdkt.html
+++ b/pdkt.html
@@ -35,7 +35,7 @@
               <div class="bg-pink-300 text-black font-semibold text-center text-xl h-100">
                 <div class="m-3"><h1> Some Of Our "PDKT" Photos </h1></div>
                 
-                <div class="flex flex-row flex-wrap justify-center gap-2 p-5 bg-slate-200 rounded-3xl shadow-lg">
+                <div class="flex flex-row flex-wrap justify-center gap-2 p-5 bg-slate-200 rounded-3xl shadow-lg bg-opacity-70">
                     <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/1.jpg" alt="">
                     <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/2.jpg" alt="">
                     <img class="w-1/4 h-1/4 rounded-3xl" src="./images/pdkt/3.jpg" alt="">
