--- a/lastword.html
+++ b/lastword.html
@@ -41,9 +41,9 @@
                     <div class="hero-content text-center text-neutral-content bg-pink-400 p-4 bg-opacity-50 shadow-lg text-white">
                       <div class="max-w-md">
                         <h1 class="mb-5 text-5xl font-bold">Halo cantik!</h1>
-                        <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim metus, sit amet auctor massa faucibus et. Proin consequat auctor felis in sodales. Maecenas lacus mauris, condimentum mattis rutrum id, mattis a elit. Nullam dolor sapien, convallis id auctor ac, efficitur eget lorem. Vestibulum ante ipsum primis in faucibus orci luctus et </p>
+                        <p class="mb-5">Maaf ya kalo gift ini ga terlalu lucu atau gimana HEHHEHE, sekali lagii happy sweet seventeen sayang,semoga kamu suka hadiah kecil sama surprise yang udah aku kasih,maaf juga surprise nya telattt heheheh😅, i love you </p>
                         <br>
-                        <p> Oiyaa, ini ada lagu buat kamu. dengerin yaa:</p>
+                        <p> Oiyaa, aku ga bakal bosen buat suruh kamu dengerin lagu ini! denger sampe abis yaaw</p>
                         <br>
                         <div class="flex justify-center">
                         <audio controls>
